[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/biodex/pokedex_list.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/biodex/pokedex_buton.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/Screen/biodex.gd" type="Script" id=5]

[node name="biodex" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Interface" type="Sprite" parent="."]
position = Vector2( 120, 80 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 3

[node name="NameList" type="Control" parent="."]
margin_left = 135.0
margin_top = 15.0
margin_right = 235.0
margin_bottom = 145.0
rect_clip_content = true

[node name="SideBar" type="TextureButton" parent="NameList"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 30.0
rect_scale = Vector2( 0.4, 0.4 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
expand = true

[node name="SpriteList" type="Control" parent="."]
margin_left = 64.0
margin_top = 24.0
margin_right = 128.0
margin_bottom = 136.0
rect_clip_content = true

[node name="TimerScroll" type="Timer" parent="."]
wait_time = 0.05
